Fix text overflow

--- a/src/styles/card.module.scss
+++ b/src/styles/card.module.scss
@@ -1,10 +1,8 @@
 @use 'sass:math';
 
 $width: 300px;
-$height: 265px;
 
 .card {
-  height: $height;
   width: $width;
   margin: 10px 5px;
   border-radius: 0;
